# Modern_CMake

./: .gitignore  .gitmodules  README.md
HelloWorld/: CMakeLists.txt
HelloWorld/src/: main.cpp
VS_CMAKE_organize/: CMakeLists.txt  main.cpp
VS_CMAKE_organize/include/: sum.h
VS_CMAKE_organize/src/: sum.cpp
add_external_lib/: CMakeLists.txt  main.cpp
add_libraries/: CMakeLists.txt  main.cpp
add_libraries/Math/: CMakeLists.txt
add_libraries/Math/include/: sum.h
add_libraries/Math/src/: sum.cpp
cpp_standards/: CMakeLists.txt
create_lib/: CMakeLists.txt
create_lib/include/: library.h
create_lib/src/: library.cpp
find_library/: CMakeLists.txt  main.cpp
find_package/: CMakeLists.txt  main.cpp
hello_cmake/: CMakeLists.txt  main  main.cpp
hello_cmake/buid/: CMakeCache.txt  Makefile  cmake_install.cmake
includes/: CMakeLists.txt
includes/src/: main.cpp
use_MyMathLib/: CMakeLists.txt  main.cpp
