cmake_minimum_required(VERSION 3.22)
project(add_external_lib)
add_executable(${PROJECT_NAME} main.cpp)
add_subdirectory(external_lib/glfw)
target_include_directories(${PROJECT_NAME} PUBLIC external_lib/glfw/include)
target_link_directories(${PROJECT_NAME} PUBLIC external_lib/glfw/src)
target_link_libraries(${PROJECT_NAME} PUBLIC glfw)
