cmake_minimum_required(VERSION 3.22)
project(FindPackage LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED True)
find_package(GLEW REQUIRED)
add_executable(${PROJECT_NAME} main.cpp)
target_include_directories(${PROJECT_NAME} PUBLIC ${PROJECT_BINARY_DIR} ${GLEW_INCLUDE})
target_link_libraries(${PROJECT_NAME} PUBLIC ${GLEW_LIBRARIES})